# AE-Pybind-Error

./: Skeleton.aex
Template/Skeleton/: CMakeLists.txt  Skeleton.cpp  Skeleton.h  Skeleton_Strings.cpp
Template/Skeleton/Debug/: Skeleton.exp  Skeleton.lib
Template/Skeleton/Win/: Skeleton.sln  Skeleton.vcxproj
Template/Skeleton/Win/x64/Debug/: Skeleton.vcxproj.FileListAbsolute.txt
Template/Skeleton/Win/x64/Debug/Skeleton.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Skeleton.lastbuildstate  Skeleton.write.1u.tlog  bscmake.read.1.tlog  link.command.1.tlog  link.read.1.tlog  rc.command.1.tlog
Template/Skeleton/Win/x64/Release/: Skeleton.exp
Template/Skeleton/Win/x64/Release/Skeleton.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Skeleton.lastbuildstate  bscmake.command.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
